--- a/CurrentRelease/ru/Using BCH training modules to meet stakeholder needs.html
+++ b/CurrentRelease/ru/Using BCH training modules to meet stakeholder needs.html
@@ -70,10 +70,8 @@
     </div>
     <div id="pagebody">
         <div id="mainbody">
-<P>Содержит руководство для инструкторов по использованию учебных модулей МПБ при обучении различных категорий заинтересованных лиц.</P>
-<DIV class=Section1>
-<P class=MsoNormal>&nbsp;</P>
-<P class=MsoNormal><IMG alt="" src="images/pdf.gif" border=0>&nbsp;<A href='http://moodle.unep.ch/mod/resource/view.php?inpopup=true&amp;id=619&amp;username=guest&amp;password=guest"' target=_blank>Руководство</A></P></DIV>
+<P><STRONG>Содержит руководство для инструкторов по использованию учебных модулей МПБ при обучении различных категорий заинтересованных лиц.</STRONG></P>
+<P><IMG class=activityicon alt=Recurso src="images/pdf.gif"> <A href="http://bch.cbd.int/help/trainingmaterials/Ru/01) Using BCH training modules to meet stakeholder needs/GD01Ru.pdf" target=_blank>Руководство</A></P>
             <a name="seealsobookmark"></a>
             
         </div>
